# 2024_DanceSyllabusesApp

./: .gitignore  .gitmodules  CMakeLists.txt  DefaultStylingAndProperties.qml  LessonPage.qml  LoginPage.qml  Main.qml  NavigationSystem.qml  ProfilePage.qml  SignUpPage.qml  UserDetails.qml  UserSessionDetails.qml  WelcomePage.qml  android_release.keystore  main.cpp
backend/: .clang-format  .gitignore  CMakeLists.txt  TODO_LIST.txt  build.ps1  format.sh  setup.sql
backend/include/: customer.hpp  customer_dao.hpp  scope_guard.hpp
backend/src/: customer.cpp  customer_dao.cpp  main.cpp
code/: CMakeLists.txt  main.cpp  mainwindow.ui
documentation/: copyright_laws.docx  dance_moves_reference.docx  developer_documentation.docx  developer_wishlist.docx  program_licensing.docx  program_ui_design.docx  program_ui_design.xd  program_ui_design_for_the_features_intended.docx  program_ui_design_for_the_features_intended.xd  ~$ogram_ui_design_for_the_features_intended.docx
import/qml/: ComponentNavBar.qml  ComponentSFXPlayer.qml  ComponentTitleBar.qml  GblVarsDefaultQMLClassValues.qml  GblVarsUserDetails.qml  GblVarsUserSessionDetails.qml  Main.qml  PageArticle.qml  PageArticles.qml  PageLesson.qml  PageLessons.qml  PageLogin.qml  PageProfile.qml  PageSettings.qml  PageSignUp.qml  PageWelcome.qml
import/sci/: text_input_border.sci
